# CppCommon

./: CMakeLists.txt  main.cpp
lib/algorithms/RAII/: basic.h
lib/algorithms/trees/btree/: tree.cpp  tree.h
lib/design_patterns/creational/: singleton.cpp  singleton.h
lib/multithreading/simple_worker_thread/: worker.cpp  worker.h
